--- a/Problem Description_Capstone.ipynb
+++ b/Problem Description_Capstone.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data come from this government-established website https://data.tainan.gov.tw/dataset/landmark2/resource/0faea8ce-212e-40bd-861a-65f0d2789db6"
+    "The data of tourist attractions comes from Data.Tainan https://data.tainan.gov.tw/dataset/landmark2/resource/0faea8ce-212e-40bd-861a-65f0d2789db6. The data comprises of the name of the acknowledged tourist attraction, telephone number, address, longitude, latitude, and etc. The dataset will be cleaned and left only the information that is related to my analysis. In other words, only the location and the name will be left. Moreover, we will use the Foursquare API to retrieve the data of venues to discover the relationship between the tourists attractions and the neighborhoods."
    ]
   }
  ],
